# RSG

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md
include/: RSG-old.hpp  RSG.hpp  gui.hpp  test.hpp
src/: RSG-old.cpp  RSG.cpp  gui.cpp  main.cpp
src/cmd-interface/: main.cpp
src/common/: RSG.cpp
src/ncurces-interface/: gui.cpp  main.cpp
src/tests/: main.cpp
